# pydantic-tests

./: LICENSE  README.md  camdkit_implementation_notes.md  main.py  pydantic_models.py  pyproject.toml
experiments/: learnings.ipynb
src/main/python/camdkit/: backwards.py  base_types.py  camera_types.py  clip.py  compatibility.py  derived_artifacts.py  examples.py  framework.py  lens_types.py  model.py  model_types.py  numeric_types.py  string_types.py  timing_types.py  tracker_types.py  transform_types.py  types.py  versioning_types.py
src/test/python/: test_camera_types.py  test_clip.py  test_examples.py  test_lens_types.py  test_model.py  test_timing_types.py  test_tracker_types.py  test_transform_types.py
src/test/resources/model/: lens.json  timing.json
src/tools/python/: generate_complete_dynamic_example.py  generate_complete_static_example.py  generate_opentrackio_schema.py  generate_recommended_dynamic_example.py  generate_recommended_static_example.py
test/python/: test_base_types.py  test_camera_types.py  test_clip.py  test_compatibility.py  test_framework.py  test_lens_types.py  test_model.py  test_model_types.py  test_numeric_types.py  test_schema_accuracy.py  test_string_types.py  test_timing_types.py  test_tracker_types.py  test_transform_types.py  test_versioning_types.py
test/resources/model/: lens.json  static_camera.json  static_lens.json  timing.json
