#[tool.poetry]
#name = "pydantic tests"
#version = "0.1.0"
#description = ""
#authors = ["Your Name <you@example.com>"]
#readme = "README.md"
#
#[tool.poetry.dependencies]
#python = "^3.12"
#pydantic = {extras = ["email"], version = "^2.9.2"}
#pydantic-settings = "^2.5.2"
#jsonref = "^1.1.0"
#notebook = "^7.3.1"
#
#
[build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
